@@ -1,3 +1,11 @@
+2005-08-11  Masatake YAMATO  <jet@gyve.org>
+
+	* hexl.el (hexl-address-region): 
+	(hexl-ascii-region, hexl-font-lock-keywords): 
+	(hexl-highlight-line-range): Use the term "region"
+	instead of "area" for consistency with the other symbols
+	defined in hexl.el.
+
 2005-08-09  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* menu-bar.el (menu-bar-options-save): Move `display-time-mode' to
